apps/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
  - port: 443
    targetPort: 443
    name: https
